@@ -259,7 +259,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 		$bugnote_count = bug_bugnote_count( $v_id );
 
 		# grab the project name
-		$project_name = get_project_field( $v_project_id, 'name' );
+		$project_name = project_get_field( $v_project_id, 'name' );
 
 		$query4 = "SELECT *
 			FROM $g_mantis_bug_text_table
