@@ -247,7 +247,7 @@
 		$bugnote_count = bug_bugnote_count( $v_id );
 
 		# grab the project name
-		$project_name = get_project_field( $v_project_id, 'name' );
+		$project_name = project_get_field( $v_project_id, 'name' );
 
 		if ( $bugnote_count > 0 ) {
 			$query = "SELECT UNIX_TIMESTAMP(last_modified) as last_modified
