@@ -117,6 +117,8 @@ Mantis ChangeLog
  * Added lang_api.php
  * Added string_api.php
  * Removed str_pad() we can use str_pad() from PHP4 now
+ * Implemented project row caching
+ * Make db_result() and db_fetch_array() return data with slashes stripped
 
 2002.08.23  -  0.17.5
  * Corrected bug_delete.php and bug_delete_page.php, which ignored the $g_allow_bug_delete_access_level setting.
